crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__error_path_dangling_colons.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "Foo::"
---
PathMember(
    1,
    6,
)
