crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__error_path_reserved_member.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "Foo::type"
---
PathMember(
    1,
    6,
)
