crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__error_reserved_word.snap
---
source: crates/alder-parse/src/expression/path.rs
description: type
---
Reserved(
    Type,
    1,
    1,
)
