crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__error_sql_word_outside_query_is_var.snap
---
source: crates/alder-parse/src/expression/path.rs
description: select
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Var(
        "select",
    ),
}
