crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__lowercase_namespace_constructor.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "api::models::User::New(42)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 27,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 23,
                },
            },
            value: Path(
                Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 4,
                                },
                            },
                            value: "api",
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 12,
                                },
                            },
                            value: "models",
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 14,
                                },
                                end: Position {
                                    line: 1,
                                    column: 18,
                                },
                            },
                            value: "User",
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 20,
                                },
                                end: Position {
                                    line: 1,
                                    column: 23,
                                },
                            },
                            value: "New",
                        },
                    ],
                },
            ),
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 24,
                    },
                    end: Position {
                        line: 1,
                        column: 26,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 42.0,
                        text: "42",
                    },
                ),
            },
        ],
    },
}
