crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__lowercase_namespace_value.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "api::client::send"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: PathVar {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "api",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: "client",
                },
            ],
        },
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 14,
                },
                end: Position {
                    line: 1,
                    column: 18,
                },
            },
            value: "send",
        },
    },
}
