crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__path_bare.snap
---
source: crates/alder-parse/src/expression/path.rs
description: None
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Path(
        Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "None",
                },
            ],
        },
    ),
}
