crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__path_deep.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "Ui::Button::Primary"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 20,
        },
    },
    value: Path(
        Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: "Ui",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "Button",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: "Primary",
                },
            ],
        },
    ),
}
