crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__path_dot_access.snap
---
source: crates/alder-parse/src/expression/path.rs
description: array.map
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Access {
        record: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Var(
                "array",
            ),
        },
        field: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: "map",
        },
    },
}
