crates/alder-parse/src/expression/snapshots/alder_parse__expression__path__tests__path_qualified.snap
---
source: crates/alder-parse/src/expression/path.rs
description: "Option::Some"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: Path(
        Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "Option",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: "Some",
                },
            ],
        },
    ),
}
